[gd_scene load_steps=3 format=3 uid="uid://ctvae00raux8m"]

[ext_resource type="Script" uid="uid://c6qv6ttxed4xw" path="res://ui/permanent_bonus_chooser/permanent_bonus_card/permanent_bonus_card.gd" id="1_goj3g"]
[ext_resource type="Texture2D" uid="uid://djsb6x80t66ij" path="res://icon.svg" id="1_xwpui"]

[node name="PermanentBonusCard" type="AspectRatioContainer"]
offset_right = 128.0
offset_bottom = 155.0
size_flags_horizontal = 0
script = ExtResource("1_goj3g")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CardButton" type="TextureButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("1_xwpui")

[node name="CardDescription" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Test"
horizontal_alignment = 1
autowrap_mode = 2
